--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router": "^7.11.0",
+    "@gsap/react": "^2.1.2",
+    "@lottiefiles/dotlottie-react": "^0.17.12",
+    "@vercel/analytics": "^1.6.1",
+    "dotenv": "^17.2.3",
+    "gsap": "^3.14.2",
+    "lenis": "^1.3.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
