removed unused codes

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "description": "A modern, responsive cloud storage application built with React for uploading, organizing, and managing files and folders",
-  "author": "Your Name",
+  "author": "Rqoeeb Olaniyi",
   "license": "MIT",
   "repository": {
     "type": "git",
